# Flowly

./: .env  .env.example  .gitignore  README.md
backend/: API.md  main.py  requirements.txt  test_connection.py
backend/app/: crud.py  database.py  main.py  models.py  planning_service.py  pyproject.toml  schemas.py  status_utils.py
backend/db/: schema.sql
backend/planing_engine/: .env  gemini_client.py  planning.py  rules.md
backend/planing_engine/tests/: test_engine.py
docs/: ARCHITECTURE.md  BACKEND.md  ENDPOINTS.md  FRONTEND.md  OPERATIONS.md  README.md  database_connect_docs.md
frontend/: README.md  index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  index.ts
frontend/src/components/: Layout.tsx  TaskForm.tsx  TaskList.tsx
frontend/src/components/home/: Features.tsx  Hero.tsx  HowItWorks.tsx  StatCard.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/pages/: Index.tsx  Tasks.tsx  TasksPage.tsx  TodayPlanPage.tsx
frontend/src/styles/: index.css
planing_engine/: .env  __init__.py  engine.py  gemini_client.py  models.py  planning.py  requirements.txt
planing_engine/tests/: test_engine.py  test_planning_rules.py
planning_engine/: README.md
